# api/controllers/SiteController.php
@@ -1,62 +1,34 @@
 <?php
+
 namespace api\controllers;
 
+use api\components\ApiController;
 use Yii;
+use yii\base\UserException;
+use yii\filters\auth\HttpBearerAuth;
+use yii\helpers\ArrayHelper;
+use yii\helpers\UnsetArrayValue;
 use yii\web\Controller;
 use yii\filters\VerbFilter;
 use yii\filters\AccessControl;
 use common\models\LoginForm;
+use yii\web\HttpException;
+use yii\web\NotFoundHttpException;
 
 /**
  * Site controller
  */
-class SiteController extends Controller
+class SiteController extends ApiController
 {
     /**
      * {@inheritdoc}
      */
     public function behaviors()
     {
-        return [
-            'access' => [
-                'class' => AccessControl::className(),
-                'only' => ['logout', 'signup'],
-                'rules' => [
-                    [
-                        'actions' => ['signup'],
-                        'allow' => true,
-                        'roles' => ['?'],
-                    ],
-                    [
-                        'actions' => ['logout'],
-                        'allow' => true,
-                        'roles' => ['@'],
-                    ],
-                ],
-            ],
-            'verbs' => [
-                'class' => VerbFilter::className(),
-                'actions' => [
-                    'logout' => ['post'],
-                ],
-            ],
-        ];
-    }
-
-    /**
-     * {@inheritdoc}
-     */
-    public function actions()
-    {
-        return [
-            'error' => [
-                'class' => 'yii\web\ErrorAction',
-            ],
-            'captcha' => [
-                'class' => 'yii\captcha\CaptchaAction',
-                'fixedVerifyCode' => YII_ENV_TEST ? 'testme' : null,
-            ],
-        ];
+        return ArrayHelper::merge(parent::behaviors(), [
+            // No authentication required
+            'authenticator' => new UnsetArrayValue(),
+        ]);
     }
 
     /**
@@ -70,37 +42,44 @@ class SiteController extends Controller
     }
 
     /**
-     * Logs in a user.
+     * Display error for API
      *
-     * @return mixed
+     * @return array
      */
-    public function actionLogin()
+    public function actionError()
     {
-        if (!Yii::$app->user->isGuest) {
-            return $this->goHome();
+        if (($exception = Yii::$app->getErrorHandler()->exception) === null) {
+            $exception = new NotFoundHttpException(Yii::t('yii', 'Page not found.'));
         }
 
-        $model = new LoginForm();
-        if ($model->load(Yii::$app->request->post()) && $model->login()) {
-            return $this->goBack();
+        Yii::$app->getResponse()->setStatusCodeByException($exception);
+
+        if ($exception instanceof \yii\base\Exception) {
+            $name = $exception->getName();
         } else {
-            $model->password = '';
-
-            return $this->render('login', [
-                'model' => $model,
-            ]);
+            $name = Yii::t('yii', 'Error');
         }
-    }
 
-    /**
-     * Logs out the current user.
-     *
-     * @return mixed
-     */
-    public function actionLogout()
-    {
-        Yii::$app->user->logout();
+        $code = $exception->getCode();
+        if ($exception instanceof HttpException) {
+            $code = $exception->statusCode;
+        }
+        if ($code) {
+            $name .= " (#$code)";
+        }
 
-        return $this->goHome();
+        if ($exception instanceof UserException) {
+            $message = $exception->getMessage();
+        } else {
+            $message = Yii::t('yii', 'An internal server error occurred.');
+        }
+
+        return [
+            'name' => $name,
+            'message' => $message,
+            'code' => $exception->getCode(),
+            'status' => $code,
+            'type' => get_class($exception),
+        ];
     }
 }
